--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -L index.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
